--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -45,7 +45,7 @@ rss:
 footer:
   # Specify the date when the site was setup.
   # If not defined, current year will be used.
-  #since: 2015
+  since: 2019
 
   # Icon between year and copyright info.
   icon: user
@@ -63,7 +63,7 @@ footer:
     version: true
   # -------------------------------------------------------------
   # Any custom text can be defined here.
-  #custom_text: Hosted by <a target="_blank" href="https://pages.github.com">GitHub Pages</a>
+  custom_text: Tongji by <a target="_blank" href="https://tongji.baidu.com/web/10000142991/overview/index?siteId=14369506">Baidu Statistic</a>
 
 # ---------------------------------------------------------------
 # SEO Settings
@@ -92,14 +92,27 @@ index_with_subtitle: false
 # Value before `||` delimeter is the target link.
 # Value after `||` delimeter is the name of FontAwesome icon. If icon (with or without delimeter) is not specified, question icon will be loaded.
 menu:
-  home: / || home
-  about: /about/ || user
-  tags: /tags/ || tags
-  #categories: /categories/ || th
-  archives: /archives/ || archive
-  #schedule: /schedule/ || calendar
-  #sitemap: /sitemap.xml || sitemap
-  #commonweal: /404/ || heartbeat
+  #home: /|| home
+  #about: about/|| user
+  #tags: tags/|| tags
+  #categories: categories/|| th
+  微服务Gateway: Gateway/|| archive
+  NoSql: NoSql/
+  对象存储: ObjectStorage/
+  Kafka: Kafka/
+  工作技能: WorkingSkill/
+  Golang: Golang/
+  计算机网络: Network/
+  操作系统: OperatingSystem/
+  工具: Tools/
+  CICD: CICD/
+  监控&告警: Monitor/
+  设计模式: DesignPattern/
+  BigData: BigData/
+  微信小程序: SmallApp/
+  #schedule: schedule/|| calendar
+  #sitemap: sitemap.xml|| sitemap
+  #commonweal: 404/|| heartbeat
 
 # Enable/Disable menu icons.
 menu_icons:
@@ -353,7 +366,7 @@ han: false
 #swiftype_key:
 
 # Baidu Analytics ID
-#baidu_analytics:
+baidu_analytics: 6dfb9b3a6f0af2014b343d5f0af775f3
 
 # Duoshuo ShortName
 #duoshuo_shortname:
@@ -549,7 +562,7 @@ firestore:
 # Get more information on http://ibruce.info/2015/04/04/busuanzi/
 busuanzi_count:
   # count values only if the other configs are false
-  enable: false
+  enable: true
   # custom uv span for the whole site
   site_uv: true
   site_uv_header: <i class="fa fa-user"></i>
